objects/Build_Task__c.object
<CustomObject>
    <fields>
        <fullName>Continuous_Integration__c</fullName>
        <label>Continuous Integration</label>
        <referenceTo>Continuous_Integration__c</referenceTo>
        <relationshipLabel>Build Tasks</relationshipLabel>
        <relationshipName>Build_Tasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Deployment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deployment</label>
        <referenceTo>Deployment__c</referenceTo>
        <relationshipLabel>Build Tasks</relationshipLabel>
        <relationshipName>Build_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <description>Duration is calculated in seconds.</description>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <defaultValue>now()</defaultValue>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Validate</fullName>
                </value>
                <value>
                    <fullName>Deploy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Build Task</label>
    <nameField>
        <displayFormat>BT-{0000000}</displayFormat>
        <label>Build Task Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Build Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>